--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://philip-machar.github.io/Machar-AI",
+  "homepage": "https://philip-machar.github.io/Machar-AI",
   "name": "machar-ai",
   "private": true,
   "version": "0.0.0",
