--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,8 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://machar-ai-main.vercel.app/api/$1" }
-  ]
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
 }
